# registry-demo-chain

./: Cargo.toml
pallets/registry/: Cargo.toml
pallets/registry/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
