[package]
name = "pallet-registry"
version = "0.0.0"
description = ""
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2021"
license = "0BSD"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
const-oid = { version = "0.9.6", default-features = false, features = ["db"] }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10.8", default-features = false }
x509-cert = { version = "0.2.5", default-features = false, features = ["pem"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "const-oid/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "scale-info/std",
    "sha2/std",
    "x509-cert/std",
]
